--- a/tmechfrontend/package.json
+++ b/tmechfrontend/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "axios": "^0.18.0",
     "react": "^16.2.0",
+    "react-addons-css-transition-group": "^15.6.2",
     "react-dom": "^16.2.0",
+    "react-helmet": "^5.2.0",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
